tidos/tests/control_tags/panics/missing_pattern_in_match_statement.stderr
error[E0004]: non-exhaustive patterns: `Pet::Other { .. }` not covered
  --> tests/control_tags/panics/missing_pattern_in_match_statement.rs:15:12
   |
15 |             {#match my_pet}
   |                     ^^^^^^ pattern `Pet::Other { .. }` not covered
   |
note: `Pet` defined here
  --> tests/control_tags/panics/missing_pattern_in_match_statement.rs:4:7
   |
4  |     enum Pet {
   |          ^^^
...
8  |         Other { name: String }
   |         ----- not covered
   = note: the matched value is of type `Pet`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
25 ~         },
26 ~         Pet::Other { .. } => todo!(),
   |
